assets/mobirise/css/mbr-additional.css
/* ... */
body {
  font-family: Inter Tight;
}

.display-1 {
  font-family: 'Playfair', serif;
  font-size: 4.2rem;
  line-height: 4.2rem;
  color: #7A0081;
}

.display-1>.mbr-iconfont {
  font-size: 5.25rem;
}

.display-2 {
  font-family: 'Playfair', serif;
  font-size: 3.375rem;
  line-height: 1;
  color: #7A0081;
  text-align: center;
  font-weight: 500;
}

.display-2>.mbr-iconfont {
  font-size: 4.25rem;
}

.display-3 {
  font-family: 'Playfair', serif;
  font-size: 2.5625rem;
  line-height: 1;
  color: #0A648E;
  text-align: center;
  font-weight: 500;
}

.navbar-nav .nav-link,
.btn {
  font-family: 'Manrope', sans-serif;
  font-size: 1.3rem;
  line-height: 1.5;
}

.display-4 {
  font-family: 'Playfair', serif;
  line-height: 1.5;
  font-size: 2.125rem;
  font-style: normal;
  font-weight: 500;
}

.display-4>.mbr-iconfont {
  font-size: 1.75rem;
}

.display-5 {
  font-family: 'Playfair', serif;
  font-size: 1.8rem;
  line-height: 1.5;
}

.display-5>.mbr-iconfont {
  font-size: 2.25rem;
}

.display-7 {
  font-family: 'Manrope', sans-serif;
  font-size: 1.3rem;
  line-height: 1.5;
}

.display-7>.mbr-iconfont {
  font-size: 1.75rem;
}

.display-8 {
  font-family: 'Manrope', sans-serif;
  font-size: 1rem;
}


.abi_quote_right {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
}

.abi_quote .card-text:last-child {
  margin-bottom: 0;
}

/* ---- Fluid typography for mobile devices ---- */
/* 1.4 - font scale ratio ( bootstrap == 1.42857 ) */
/* 100vw - current viewport width */
/* (48 - 20)  48 == 48rem == 768px, 20 == 20rem == 320px(minimal supported viewport) */
/* 0.65 - min scale variable, may vary */
@media (max-width: 992px) {
  .display-1 {
    font-size: 3.36rem;
  }
}

@media (max-width: 768px) {
  .display-1 {
    font-size: 2.94rem;
    font-size: calc(2.12rem + (4.2 - 2.12) * ((100vw - 20rem) / (48 - 20)));
    /* line-height: calc(1.1 * (2.12rem + (4.2 - 2.12) * ((100vw - 20rem) / (48 - 20)))); */
    line-height: 4rem;
  }

  .display-2 {
    font-size: 2.72rem;
    font-size: calc(1.8399999999999999rem + (3.4 - 1.8399999999999999) * ((100vw - 20rem) / (48 - 20)));
    line-height: calc(1.3 * (1.8399999999999999rem + (3.4 - 1.8399999999999999) * ((100vw - 20rem) / (48 - 20))));
  }

  .display-4 {
    font-size: 1.12rem;
    font-size: calc(1.14rem + (1.4 - 1.14) * ((100vw - 20rem) / (48 - 20)));
    line-height: calc(1.4 * (1.14rem + (1.4 - 1.14) * ((100vw - 20rem) / (48 - 20))));
  }

  .display-5 {
    font-size: 1.44rem;
    font-size: calc(1.28rem + (1.8 - 1.28) * ((100vw - 20rem) / (48 - 20)));
    line-height: calc(1.4 * (1.28rem + (1.8 - 1.28) * ((100vw - 20rem) / (48 - 20))));
  }

  .display-7 {
    font-size: 1.12rem;
    font-size: calc(1.14rem + (1.4 - 1.14) * ((100vw - 20rem) / (48 - 20)));
    line-height: calc(1.4 * (1.14rem + (1.4 - 1.14) * ((100vw - 20rem) / (48 - 20))));
  }
}

@media (min-width: 992px) and (max-width: 1400px) {
  .display-1 {
    font-size: 2.94rem;
    font-size: calc(2.12rem + (4.2 - 2.12) * ((100vw - 62rem) / (87 - 62)));
    line-height: calc(1.1 * (2.12rem + (4.2 - 2.12) * ((100vw - 62rem) / (87 - 62))));
  }

  .display-2 {
    font-size: 2.72rem;
    font-size: calc(1.8399999999999999rem + (3.4 - 1.8399999999999999) * ((100vw - 62rem) / (87 - 62)));
    line-height: calc(1.3 * (1.8399999999999999rem + (3.4 - 1.8399999999999999) * ((100vw - 62rem) / (87 - 62))));
  }

  .display-4 {
    font-size: 1.12rem;
    font-size: calc(1.14rem + (1.4 - 1.14) * ((100vw - 62rem) / (87 - 62)));
    line-height: calc(1.4 * (1.14rem + (1.4 - 1.14) * ((100vw - 62rem) / (87 - 62))));
  }

  .display-5 {
    font-size: 1.44rem;
    font-size: calc(1.28rem + (1.8 - 1.28) * ((100vw - 62rem) / (87 - 62)));
    line-height: calc(1.4 * (1.28rem + (1.8 - 1.28) * ((100vw - 62rem) / (87 - 62))));
  }

  .display-7 {
    font-size: 1.12rem;
    font-size: calc(1.14rem + (1.4 - 1.14) * ((100vw - 62rem) / (87 - 62)));
    line-height: calc(1.4 * (1.14rem + (1.4 - 1.14) * ((100vw - 62rem) / (87 - 62))));
  }
}

/* Buttons */
.btn {
  padding: 0.5rem 2rem;
  border-radius: 4px;
}



.btn-sm {
  padding: 0.6rem 1.2rem;
  border-radius: 4px;
}

.btn-md {
  padding: 0.6rem 1.2rem;
  border-radius: 4px;
}

.btn-lg {
  padding: 1.25rem 2rem;
  border-radius: 4px;
}

.bg-primary {
  background-color: #0A648E !important;
}

.bg-success {
  background-color: #000000 !important;
}

.bg-info {
  background-color: #01563b !important;
}

.bg-warning {
  background-color: #ffffff !important;
}

.bg-danger {
  background-color: #f7f7f7 !important;
}

.btn-primary,
.btn-primary:active {
  background-color: #0A648E !important;
  border-color: #0A648E !important;
  color: #ffffff !important;
  box-shadow: none;
}

.btn-primary:hover,
.btn-primary:focus,
.btn-primary.focus,
.btn-primary.active {
  color: inherit;
  background-color: #7A0081 !important;
  border-color: #7A0081 !important;
  box-shadow: none;
}

.btn-primary.disabled,
.btn-primary:disabled {
  color: #ffffff !important;
  background-color: #7A0081 !important;
  border-color: #7A0081 !important;
}

.btn-secondary,
.btn-secondary:active {
  background-color: #0A648E !important;
  border-color: #0A648E !important;
  color: #ffffff !important;
  box-shadow: none;
}

.btn-secondary:hover,
.btn-secondary:focus,
.btn-secondary.focus,
.btn-secondary.active {
  color: inherit;
  background-color: #7881ff !important;
  border-color: #7881ff !important;
  box-shadow: none;
}

.btn-secondary.disabled,
.btn-secondary:disabled {
  color: #ffffff !important;
  background-color: #7881ff !important;
  border-color: #7881ff !important;
}

.btn-info,
.btn-info:active {
  background-color: #01563b !important;
  border-color: #01563b !important;
  color: #ffffff !important;
  box-shadow: none;
}

.btn-info:hover,
.btn-info:focus,
.btn-info.focus,
.btn-info.active {
  color: inherit;
  background-color: #02885e !important;
  border-color: #02885e !important;
  box-shadow: none;
}
/* ... */

